# marpx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  article.md  example.md  input.md  pyproject.toml  tmp-inline-ignore.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: baseline-evaluation.md
docs/spikes/: bg_image_report.md  bg_image_spike.py  directives_report.md  directives_spike.py  notes_spike.py  svg_spike.py  table_merge_report.md  table_merge_spike.py
examples/css_showcase/: quantum.md  space.md
input/: css_showcase_2.md
src/marpx/: capabilities.py  cli.py  converter.py  extract_slides.bundle.js  extract_slides.js  extractor.py  fallback_renderer.py  fonts.py  gradient_utils.py  image_utils.py  js_bundle.py  marp_renderer.py  models.py  pipeline.py  svg_utils.py  utils.py
tests/: conftest.py  test_async_utils.py  test_background.py  test_capabilities.py  test_converter.py  test_converter_e2e.py  test_decoration_gradient_fallback.py  test_directives.py  test_extractor.py  test_fallback_renderer.py  test_gradient_utils.py  test_image_utils.py  test_js_bundle.py  test_marp_renderer.py  test_models.py  test_notes.py  test_pipeline.py  test_pptx_builder.py  test_svg_math.py  test_table_rendering.py  test_text_rendering.py  test_utils.py
tests/fixtures/: animated-filter.md  bg-image.md  clip-path.md  complex-unsupported.md  decomposition-features.md  decorated-raw-text.md  decoration-features.md  gradient-features.md  inline-svg.md  inline-text-features.md  math-features.md  math.md  merged-table.md  mermaid.md  multi-paragraph.md  nested-list.md  paginate-header-footer.md  quote-box-list.md  rendered-layout-boxes.md  rendered-layout-images.md  section-pseudo-elements.md  simple.md  speaker-notes.md  table-features.md  table.md  text-shadow-features.md
(+60 files in other folders)
