[project]
name = "marpx"
version = "0.1.0"
description = "Convert Marp Markdown presentations to PPTX format"
readme = "README.md"
authors = [
    { name = "I.F.", email = "131729144+FukumotoIkuma@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Multimedia :: Graphics :: Presentation",
]
keywords = ["marp", "pptx", "powerpoint", "markdown", "presentation", "converter"]
dependencies = [
    "python-pptx",
    "playwright",
    "click",
    "pydantic>=2",
    "Pillow",
    "rich",
    "latex2mathml",
]

[project.urls]
Repository = "https://github.com/FukumotoIkuma/marpx"

[project.scripts]
marpx = "marpx.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout>=2.4.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
